--- a/styles/styles.css
+++ b/styles/styles.css
@@ -694,8 +694,12 @@ footer .footer-flex-container .contact-icons span span {
   .sec-6 {
     font-size: 0.9rem;
   }
+  .sec-6 .project-container {
+    margin-top: 1.5rem;
+  }
   .sec-6 .project-container .project-div {
     margin-bottom: 3rem;
+    margin-top: 0;
   }
   .sec-6 .project-container .project-div:last-child {
     margin-bottom: 1.2rem;
